<resources>
    <string name="app_name">GpsTraker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Update time summary</string>
    <string name="update_color">Update color</string>
    <string name="update_color_summary">Choose color summary</string>
    <!-- show dialog -->
    <string name="location_disabled">Location disabled</string>
    <string name="location_dialog_message">Do you dont to enabled GPS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>