<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/location">

    </PreferenceCategory>
    <ListPreference
        android:defaultValue="3000"
        android:entries="@array/local_time_update"
        android:entryValues="@array/local_time_update_value"
        android:key="key_preference"
        android:title="@string/update_time"
        app:icon="@drawable/ic_time_update"
        app:summary="@string/update_time_summary" />

    <ListPreference
        android:defaultValue="#FF0D5FEC"
        android:entries="@array/local_color_update"
        android:entryValues="@array/local_color_value"
        android:key="key_color"
        android:title="@string/update_color"
        app:icon="@drawable/ic_circle"
        app:summary="@string/update_color_summary" />

</PreferenceScreen>